# SPDX-FileCopyrightText: 2022 UnionTech Software Technology Co., Ltd.
#
# SPDX-License-Identifier: GPL-3.0-or-later

install(FILES icons/deepin/builtin/${CMAKE_PROJECT_NAME}.svg DESTINATION share/icons/hicolor/scalable/apps)
install(DIRECTORY deepin-system-monitor DESTINATION /usr/share/deepin-manual/manual-assets/application/)
